<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="specificItemVM" type="com.muhammadsapplication.app.modules.specificitem.data.viewmodel.SpecificItemVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnarrowleft"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_10pxv"
        android:layout_marginEnd="@dimen/_8pxh"
        android:layout_marginTop="@dimen/_44pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_7pxh"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearHeader"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStylewhite_3">
                <LinearLayout android:id="@+id/linearRowarrowleft"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_18pxv"
                    android:layout_marginStart="@dimen/_22pxh"
                    android:layout_marginTop="@dimen/_18pxv"
                    android:layout_weight="0.63"
                    android:layout_width="0dp" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageArrowleft"
                        android:layout_height="@dimen/_17pxh"
                        android:layout_marginBottom="@dimen/_3pxv"
                        android:layout_marginTop="@dimen/_3pxv"
                        android:layout_width="@dimen/_17pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_arrowleft_gray_800"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft_gray_800"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtPageTitle"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_14pxh"
                        android:layout_weight="0.84"
                        android:layout_width="0dp"
                        android:lineSpacingExtra="@dimen/_5pxh"
                        android:singleLine="true"
                        android:text="@{specificItemVM.specificItemModel.txtPageTitle}"
                        style="@style/txtIntersemibold20" tools:text="@string/lbl_tastefest"/>
                </LinearLayout>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtAction"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_20pxv"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_134pxh"
                    android:layout_marginTop="@dimen/_21pxv"
                    android:layout_weight="0.37"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@{specificItemVM.specificItemModel.txtAction}"
                    style="@style/txtInterregular16" tools:text="@string/lbl_bookmark"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:id="@+id/linearSpecificItem"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_7pxh"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <FrameLayout android:id="@+id/frameStackyvettedewitn"
                android:layout_gravity="start"
                android:layout_height="@dimen/_381pxv" android:layout_width="@dimen/_375pxh">
                <FrameLayout android:id="@+id/frameStackgroupfour"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_380pxv"
                    android:layout_marginTop="@dimen/_1pxv" android:layout_width="@dimen/_375pxh">
                    <com.asksira.loopingviewpager.LoopingViewPager
                        android:id="@+id/imageSliderSlidergroupfour"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_380pxv"
                        android:layout_width="match_parent"
                        app:autoScroll="true" app:isInfinite="true" app:scrollInterval="5000"/>

                    <com.asksira.loopingviewpager.indicator.CustomShapePagerIndicator
                        android:id="@+id/indicatorFrame330"
                        android:layout_gravity="bottom|center"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_17pxv"
                        android:layout_marginEnd="@dimen/_153pxh"
                        android:layout_marginStart="@dimen/_153pxh"
                        android:layout_marginTop="@dimen/_17pxv"
                        android:layout_width="wrap_content"
                        app:drawable_normal="@drawable/indicator_unselected_bg_white_a700_radius_8"
                        app:drawable_selected="@drawable/indicator_selected_bg_orange_700_radius_8"
                        app:indicator_size="@dimen/_8pxh" app:indicator_spacing="@dimen/_8pxh"/>
                </FrameLayout>
                <ImageView android:id="@+id/imageYvettedewitN"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_381pxh"
                    android:layout_marginEnd="@dimen/_7pxh"
                    android:layout_marginStart="@dimen/_9pxh"
                    android:layout_width="@dimen/_359pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_someconcert}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_someconcert"/>
            </FrameLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtRs1500perso"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_9pxh"
                android:layout_marginTop="@dimen/_22pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_5pxh"
                android:singleLine="true"
                android:text="@{specificItemVM.specificItemModel.txtRs1500perso}"
                style="@style/txtIntersemibold20" tools:text="@string/msg_rs_1500_perso"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtVipPass"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_9pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_5pxh"
                android:singleLine="true"
                android:text="@{specificItemVM.specificItemModel.txtVipPass}"
                style="@style/txtIntersemibold20" tools:text="@string/lbl_vip_pass"/>
            <LinearLayout android:id="@+id/linearRow7thmar2023"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_23pxh"
                android:layout_marginStart="@dimen/_9pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <LinearLayout android:id="@+id/linearRowlocation"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_2pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.5"
                    android:layout_width="0dp" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageLocation"
                        android:layout_height="@dimen/_18pxh"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_width="@dimen/_15pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_location"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_location"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtIslamabad"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.82"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{specificItemVM.specificItemModel.txtIslamabad}"
                        style="@style/txtInterregular14" tools:text="@string/lbl_islamabad"/>
                </LinearLayout>
                <TextView android:ellipsize="end"
                    android:id="@+id/txt7thMar2023"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_154pxh"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_weight="0.5"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{specificItemVM.specificItemModel.txt7thMar2023}"
                    style="@style/txtInterregular14" tools:text="@string/lbl_7th_mar_2023"/>
            </LinearLayout>
            <TextView android:gravity="start"
                android:id="@+id/txtDescription"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_9pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_8pxh"
                android:text="@{specificItemVM.specificItemModel.txtDescription}"
                style="@style/txtInterregular16_1" tools:text="@string/msg_get_excited_ta"/>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearColumngetPasses"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_99pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStyle">
                <LinearLayout android:gravity="center_horizontal"
                    android:id="@+id/linearButton"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_16pxv"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylecornerRadius_3">
                    <androidx.appcompat.widget.AppCompatButton
                        android:ellipsize="end" android:gravity="center"
                        android:id="@+id/btnGetPasses"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:lineSpacingExtra="@dimen/_4pxh"
                        android:paddingBottom="@dimen/_14pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_30pxh"
                        android:paddingTop="@dimen/_14pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_get_passes"
                        android:textAllCaps="false"
                        style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_get_passes"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
