<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="homeContainerVM" type="com.muhammadsapplication.app.modules.homecontainer.data.viewmodel.HomeContainerVM"/>
    </data>
    <LinearLayout android:gravity="start" android:id="@+id/linearColumn"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <FrameLayout android:id="@+id/fragmentContainer"
            android:layout_height="match_parent"
            android:layout_weight="1" android:layout_width="match_parent"/>
        <FrameLayout android:gravity="center_horizontal"
            android:id="@+id/frameBottombar"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_1pxh"
            android:layout_width="match_parent" style="@style/groupStylewhite_10">
            <LinearLayout android:id="@+id/linearRowcompass"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <LinearLayout android:id="@+id/linearExploreTab"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="1" android:layout_width="0dp" android:orientation="vertical">
                    <ImageView android:id="@+id/imageCompass"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_31pxh"
                        android:layout_marginTop="@dimen/_3pxv"
                        android:layout_width="@dimen/_31pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_compass"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_compass"/>
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtExplorelabelt"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_2pxh"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_marginTop="@dimen/_6pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{homeContainerVM.homeContainerModel.txtExplorelabelt}"
                        style="@style/txtAirbnbCerealAppmedium12_4" tools:text="@string/lbl_explore"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearShowMapTab"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="1" android:layout_width="0dp" android:orientation="vertical">
                    <ImageView android:id="@+id/imageEye"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_32pxh"
                        android:layout_width="@dimen/_27pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_eye"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_eye"/>
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtMaptextlabel"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_2pxh"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_marginTop="@dimen/_6pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{homeContainerVM.homeContainerModel.txtMaptextlabel}"
                        style="@style/txtAirbnbCerealAppmedium12_5" tools:text="@string/lbl_map"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/linearShowProfileTab"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_weight="1" android:layout_width="0dp" android:orientation="vertical">
                    <ImageView android:id="@+id/imageUser"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_29pxh"
                        android:layout_width="@dimen/_23pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_user_bluegray_801"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_user_bluegray_801"/>
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtProfilelabelt"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_2pxh"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_marginTop="@dimen/_9pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{homeContainerVM.homeContainerModel.txtProfilelabelt}"
                        style="@style/txtAirbnbCerealAppmedium12_5" tools:text="@string/lbl_profile"/>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</layout>
